<resources>
    <string name="app_name">BootCampAr</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_help">Ayuda</string>
    <string name="title_profile">Perfil</string>
    <string name="title_course_detail">Detalle del curso</string>
    <string name="title_register">Registración</string>
    <string name="title_login">Ingreso</string>
    <string name="just_added_text">Cursos recientemente agregados</string>
    <string name="welcomeMessage">Bienvenido!</string>
    <string name="invalidLoginMessage">Por favor, verifique su e-mail y contraseña</string>
    <string name="stillUnregistered">Si aún no está registrado</string>
    <string name="forgotPasswordText">¿Olvidó su contraseña?</string>
    <string name="hintInputEmail">Ingrese su e-mail</string>
    <string name="registerButtonText">Registrarse</string>
    <string name="loginButtonText">Ingresar</string>
    <string name="registerText">Para poder registrarse complete sus datos</string>
    <string name="hintInputName">Ingrese su nombre</string>
    <string name="hintInputLastName">Ingrese su apellido</string>
    <string name="hintInputPassword">Ingrese una contraseña</string>
    <string name="hintInputConfirmPassword">Confirme su contraseña</string>
    <string name="hasAccount">¿Ya estás registrado?</string>
    <string name="password_reset_button_text">Enviar email de reestablecimiento</string>
    <string name="home_return_button_text">Regresar</string>
    <string name="enter_email_textbox_hint">Ingrese su correo</string>
    <string name="email_recovery_explanation">Llegaste al lugar indicado. Ingresá tu email para enviarte el link de reestablecimiento.</string>
    <string name="email_recover_explanation_title">¿Tienes problemas para iniciar sesión?</string>
    <string name="restoration_mail_sent">Se ha enviado un correo para reestablecer tu contraseña.</string>
    <string name="registration_success_message">Registración exitosa!</string>
    <string name="password_dont_match_message">Las contraseñas ingresadas no concuerdan</string>
    <string name="please_complete_data_message">Por favor complete todos los datos correctamente</string>
    <string name="btn_contact">Enviar</string>
    <string name="title_contact">Contáctanos</string>
    <string name="number_contact">Ingrese su teléfono</string>
    <string name="message_contact">Mensaje</string>
    <string name="title_update_profile">Actualiza tu perfil</string>
    <string name="btn_update_profile">Actualizar</string>
    <string name="title_activity_course_list">CourseListActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_my_courses">Mis cursos</string>
    <string name="logo_img">Logo BootcampAr</string>
    <string name="txt_profile_name">Nombre</string>
    <string name="txt_profile_lastname">Apellido</string>
    <string name="txt_profile_email">E-mail</string>
    <string name="btn_profile_edit">Editar Perfil</string>
    <string name="btn_profile_fav">Mis favoritos</string>
    <string name="alt_txt_img_profile">Imágen de Perfil</string>
    <string name="btn_profile_conf">Configuracion</string>
    <string name="subtitle_profile">Ver más cursos y talleres</string>
    <string name="profile_lang">Python</string>
    <string name="arroy_left">►</string>
    <string name="arroy_right">◄</string>
    <string name="python_list_vid">Python</string>
    <string name="temario_list_vid">Temario</string>
    <string name="capitulo1_list_vid">Capitulo 1</string>
    <string name="capitulo2_list_vid">Capitulo 2</string>
    <string name="capitulo3_list_vid">Capitulo 3</string>
    <string name="capitulo4_list_vid">Capitulo 4</string>
    <string name="capitulo5_list_vid">Capitulo 5</string>
    <string name="capitulo6_list_vid">Capitulo 6</string>
    <string name="capitulo7_list_vid">Capitulo 7</string>
    <string name="introduccion_list_vid">Introduccion</string>
    <string name="operadoresaritmeticos_list_vid">Operadores Aritmeticos</string>
    <string name="operadoreslogicos_list_vid">Operadores Logicos</string>
    <string name="variables_list_vid">Variables</string>
    <string name="funciones_list_vid">Funciones</string>
    <string name="condicionales_list_vid">Condicionales</string>
    <string name="ciclos_list_vid">Ciclos</string>
    <string name="cursos">Cursos</string>
    <string name="tituloCursosDisponibles">Cursos Disponibles</string>
    <string name="courses">Cursos</string>
    <string name="course_fragment_label">Courses List</string>
    <string name="enrollment_success">Se ha inscripto al curso correctamente</string>
    <string name="title">Título</string>
    <string name="description">Descripción</string>
    <string name="profile_updated_successfully">Datos actualizados!</string>
    <string name="complete_profile_data_please">Por favor complete su nombre y apellido.</string>
    <string name="contact">Contacto</string>
    <string name="ingrese_codigo_invitacion">Ingrese su código de invitación</string>
    <string name="title_class">Python</string>
    <string name="chapter">chapter 1</string>
    <string name="introduction_class">Introduction</string>
    <string name="classDescription">classDescription</string>
    <string name="qualification_class">qualification</string>
    <string name="search_button_text">Buscar</string>
    <string name="choose_categories_text">Elija categorías</string>
    <string name="insert_search_text">Ingrese texto para buscar</string>
    <string name="select_categories_text">Seleccione categorías</string>
    <string name="invalid_invitation_code">La invitacion %s es inválida.</string>
    <string name="registered_user_with_same_mail_exists">Ya existe un usuario registrado con el e-mail %s</string>
    <string name="grupos">Grupos</string>
    <string name="curriculum">Currícula</string>
    <string name="lecciones">Lecciones</string>
    <string name="categorias">Categorias</string>
    <string name="nombre">Nombre</string>
    <string name="descripcion">Descripcion</string>
    <string name="grabar">Grabar</string>
    <string name="ingrese_descripcion">Ingrese la descripción</string>
    <string name="leccion_numero">\"Lección %d\"</string>
    <string name="los_datos_son_invalidos">Los datos son inválidos</string>
    <string name="administrador_no_puede_inscribirse">El administrador no se puede inscribir a un curso</string>
    <string name="ya_esta_inscripto_en_el_curso">Ya está inscripto en el curso</string>
    <string name="error_inscribiendo_al_curso">Error inscribiendo al curso</string>
    <string name="inscribirse">Inscribirse</string>
    <string name="ir_al_curso">Ir al curso</string>
    <string name="cursos_favoritos">Cursos favoritos</string>
    <string name="curriculas">Currículas</string>
    <string name="text_logo">Logo de nuestra aplicacion muestra la palabra bootcampar</string>
    <string name="img_android">En la imagen se muestra el logo de Android Studio</string>
    <string name="placeholder">Placeholder</string>
    <string name="calificacion">Calificación del curso</string>
    <string name="ir_a_login">Ir a login</string>
    <string name="text_main">Esta es una app nativa de Android que permite a los estudiantes del bootcamp BootcampAR acceder a los videos de los cursos, calificarlos, marcar favoritos y organizar su aprendizaje.</string>
    <string name="tu_puntuacion">Tu puntuación</string>
    <string name="curso_de_android">Curso de Android</string>
    <string name="grupo">Grupo</string>
    <string name="curso">Curso</string>
    <string name="crear_nuevo_curso">Crear nuevo curso</string>
    <string name="nombre_del_curso">Nombre del curso:</string>
    <string name="nivel">Nivel</string>
    <string name="descripcion_text">Descripción</string>
    <string name="leccion">Lección</string>
    <string name="imagen">Imagen</string>
    <string name="agregar">Agregar</string>
    <string name="crear_curso">Boton que dice agregar</string>
    <string name="detalles">Detalles</string>
    <string name="material_de_leccion">Material de lección</string>
    <string name="crear_leccion">Crear lección</string>
    <string name="ingrese_nombre_de_categoria">Ingrese nombre de categoría</string>
    <string name="nombre_del_grupo">Ingrese el nombre del grupo</string>
    <string name="invitacion">Invitación</string>
    <string name="ingrese_invitacion">Ingrese la invitación del grupo</string>
    <string name="orden">Orden</string>
    <string name="ingrese_orden">Ingrese orden</string>
    <string name="ingrese_titulo_leccion">Ingrese el título de la lección</string>
    <string name="contenido">Contenido</string>
    <string name="contenido_leccion">Ingrese el contenido de la lección</string>
    <string name="vinculo">Vínculo</string>
    <string name="link_externo">Link externo</string>
    <string name="faq">Preguntas Frecuentes</string>
    <string name="adquirir_curso">¿Como adquirir un curso?</string>
    <string name="acceder_curso">Al acceder al curso, encontraras  información de como inscribirte al mismo</string>
    <string name="tiempo_curso">¿De cuanto tiempo dispongo para  realizar mi curso?</string>
    <string name="date_curso">Los cursos se mostraran activos por el termino de 1 año(doce meses) a partir de su inicio. Al ser un curso autoasistido, usted podra elegir cuando le es conveniente realizarlo.</string>
    <string name="preguntas_frecuentes">¿Puedo realizar mas de un curso a la vez?</string>
    <string name="faq1">Cada usuario puede realizar la cantidad de cursos que desee en simultaneo, sabiendo que los cursos se mantienen activos durante 1 año desde su inicio.</string>
    <string name="preguntas_frecuentes1">¿que sucede si caduca un curso que aún no finalice?</string>
    <string name="extension_curso">Usted podra contactarnos para pedir una extención de plazo, la cual tendra costo adicionales.</string>
    <string name="como_notificar">Si no estoy conforme con mi curso  ¿como puedo notificarlo?</string>
    <string name="como_notificar_respuesta">Usted podra dejar su calificación en cada curso realizado, y tambien darnos su opinion a traves de la sección de contacto.</string>
    <string name="reproducir">Reproducir</string>
    <string name="editar">Editar</string>
    <string name="borrar">Borrar</string>
    <string name="estrella_uno">se muestra la primer estrella</string>
    <string name="estrella_dos">se muestra la segunda estrella</string>
    <string name="estrella_tres">se muestra la tercer estrella</string>
    <string name="estrella_cuatro">se muestra la cuarta estrella</string>
    <string name="estrella_cinco">se muestra la quinta estrella</string>
    <string name="com_auth0_client_id">yljxTIBYZ1mYbI0C6Rai2nqZhxRc8tJL</string>
    <string name="com_auth0_domain">dev-jvejcgb265hsomkf.us.auth0.com</string>
    <string name="com_auth0_scheme">demo</string>
    <string name="usar_auth0">Usar Auth0</string>
    <string name="serach">Buscar Cursos</string>
    <string name="NoMatches">No hay coincidencias</string>
    <string name="txt_add_course_title">Ingrese el titulo del curso</string>
    <string name="txt_add_course_description">Ingrese la descripción del curso</string>
    <string name="txt_add_course_image">Ingrese la imagen del curso</string>
    <string name="txt_course_image">Imagen del curso</string>
    <string name="ingrese_su_clave_antigua">Ingrese su clave antigua</string>
    <string name="ingrese_su_clave_nueva">Ingrese su clave nueva</string>
    <string name="repita_su_nueva_clave">Repita su nueva clave</string>
    <string name="cannot_update_profile">No se puede actualizar el perfil</string>
</resources>