<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.EditCategoriesFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fitsSystemWindows="true"
        android:paddingBottom="?attr/actionBarSize">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textCategoryName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:text="@string/nombre" />

            <EditText
                android:id="@+id/editCategoryName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:ems="10"
                android:hint="@string/ingrese_nombre_de_categoria"
                android:layout_marginStart="@dimen/_16sdp"
                android:inputType="text" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textCategoryDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:text="@string/descripcion" />

            <EditText
                android:id="@+id/editCategoryDescription"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginStart="@dimen/_9sdp"
                android:ems="10"
                android:hint="@string/ingrese_descripcion"
                android:inputType="text"
                android:importantForAccessibility="yes"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:id="@+id/buttonSaveCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_6sdp"
            android:text="@string/grabar" />

        <ListView
            android:id="@+id/categoryListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>