<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ResetPasswordActivity">

    <TextView
        android:id="@+id/textSessionIssuesMessage"
        android:layout_width="342dp"
        android:layout_height="64dp"
        android:layout_marginTop="136dp"
        android:background="@color/moon_raker"
        android:text="@string/email_recover_explanation_title"
        android:textAlignment="center"
        android:textColor="@color/earthBlue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textExplanation"
        android:layout_width="342dp"
        android:layout_height="87dp"
        android:layout_marginTop="32dp"
        android:text="@string/email_recovery_explanation"
        android:textAlignment="center"
        android:textColor="@color/earthBlue"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSessionIssuesMessage" />

    <EditText
        android:id="@+id/editTextEmailRecovery"
        android:layout_width="342dp"
        android:layout_height="44dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/enter_email_textbox_hint"
        android:inputType="textEmailAddress"
        android:textColor="@color/earthBlue"
        android:textSize="18sp"
        android:autofillHints="emailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textExplanation" />

    <Button
        android:id="@+id/buttonSendEmail"
        android:layout_width="342dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/earthBlue"
        android:text="@string/password_reset_button_text"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:onClick="resetPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailRecovery" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="342dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/earthBlue"
        android:text="@string/home_return_button_text"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:onClick="goBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSendEmail" />
</androidx.constraintlayout.widget.ConstraintLayout>